--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header-top">
         <nav class="navbar header-navbar fixed-top">
             <div class="container d-flex">
                 <div class="logo">
@@ -387,7 +387,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-5 sidebar mt-4 ps-4">
+                <div class="col-5 sidebar mt-4">
                     <div class="row sidebar-profile">
                         <div class="col d-flex">
                             <img src="./img/profile.png" alt="Ishak Alpfidan">
@@ -398,15 +398,105 @@
                             <a href="#!" class="switch-account ms-auto">Switch</a>
                         </div>
                     </div>
-                    <div class="row"></div>
-                    <div class="row"></div>
-                    <div class="row"></div>
-                    <div class="row"></div>
+                    <div class="row suggestion-title mt-3">
+                        <div class="col d-flex">
+                            <span>Suggestions For You</span>
+                            <a href="#!" class="switch-account ms-auto">See All</a>
+                        </div>
+                    </div>
+                    <div class="row suggestion-user mt-3">
+                        <div class="col d-flex mb-3">
+                            <img src="./img/user/steve-jobs.jpg" alt="Steve Jobs">
+                            <span class="ms-3">
+                                <a href="#!" class="profile-link">steve.jobs</a>
+                                Followed by elon.musk + 9 more
+                            </span>
+                            <a href="#!" class="follow-account ms-auto">Follow</a>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <img src="./img/user/elon-musk.jpg" alt="Elon Musk">
+                            <span class="ms-3">
+                                <a href="#!" class="profile-link">elon.musk</a>
+                                Followed by jeff.bezos
+                            </span>
+                            <a href="#!" class="follow-account ms-auto">Follow</a>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <img src="./img/user/bili-gates.jpg" alt="Bill Gates">
+                            <span class="ms-3">
+                                <a href="#!" class="profile-link">bill.gates</a>
+                                New to Instagram
+                            </span>
+                            <a href="#!" class="follow-account ms-auto">Follow</a>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <img src="./img/user/mark-zuckerberg.jpg" alt="Mark Zuckerberg">
+                            <span class="ms-3">
+                                <a href="#!" class="profile-link">mark.zuckerberg</a>
+                                Followed by bill.gates + 21 more
+                            </span>
+                            <a href="#!" class="follow-account ms-auto">Follow</a>
+                        </div>
+                        <div class="col d-flex mb-3">
+                            <img src="./img/user/jeff-bezos.jpg" alt="Jeff Bezos">
+                            <span class="ms-3">
+                                <a href="#!" class="profile-link">jeff.bezos</a>
+                                Followed by bill.gates + 5 more
+                            </span>
+                            <a href="#!" class="follow-account ms-auto">Follow</a>
+                        </div>
+                    </div>
+                    <div class="row footer-links mt-3">
+                        <div class="col">
+                            <ul>
+                                <li>
+                                    <a href="#!">About</a> 
+                                </li>
+                                <li>
+                                    <a href="#!">Help</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Press</a>
+                                </li>
+                                <li>
+                                    <a href="#!">API</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Jobs</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Privacy</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Terms</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Locations</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Top Accounts</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Hashtags</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Language</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row sidebar-footer mt-3">
+                        <div class="col">
+                            <span>&copy; 2022 INSTAGRAM FROM META</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-
+    <footer>
+        &copy;2022 | Created By <a href="https://ishakalpfidan.com">İshak Alpfidan</a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
